# rugai_auto_reger

./: main.py  proxies.txt  pyproject.toml
core/: __init__.py  start_reger.py
utils/: __init__.py  generate_password.py  get_connector.py  get_ref_code.py
utils/pyemailnator/: __init__.py  create_client.py  validate_proxy.py
