[tool.poetry]
name = "rugai-auto-reger"
version = "0.1.0"
description = ""
authors = ["hachimaru <74972395+xxspell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
better-proxy = "^1.1.3"
loguru = "^0.7.2"
aiohttp-proxy = "^0.1.2"
fake-useragent = "^1.5.0"
httpx = "^0.27.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
